# iot-collector-service

./: README.md  iot-dim-dev.spec  iot-service.spec  iot-sim-dev.spec  main.py  pyproject.toml  sim_dev_main.py
configuration/: mqtt_configuration.csv  sql_configuration.csv
iot_collector_service/: __init__.py  __main__.py  collector_configuration.py  collector_service.py  data_collector.py  data_collector_service.py  device_configuration.py  event_logging.py  iot_service.py  mqtt_client.py  sql_client.py  sql_service.py
iot_sim_device/: sim_device.py
sim_configuration/: sim_device_configuration.csv  sim_device_measurements.csv
